# sift

./: .gitignore  README.md  app.go  app_test.go  go.mod
frontend/: .cta.json  vite.config.ts
frontend/src/: styles.css
frontend/src/routes/: index.tsx
sift/: README.md  app.go  app_test.go  main.go  prd.json
sift-sdk-python/: README.md  pyproject.toml
sift-sdk-python/src/sift_sdk/: __init__.py  asgi.py  logger.py  sinks.py
sift-sdk-python/tests/: test_sdk.py
sift-spec/: README.md
sift-spec/examples/: request-error.json  request-success.json
sift-spec/schemas/: sift-event-v1.schema.json
sift/frontend/: index.html  package.json
sift/frontend/src/: styles.css
sift/frontend/src/routes/: index.tsx
