[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-sdk"
version = "0.1.0"
description = "Python SDK for Sift wide events"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sift" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

